# SQL-Trail

./: .gitignore  LICENSE  execution.md  readme.md
backend/: app.py  config.py  main.py  pyproject.toml  questoes.json  requirements.txt  services.py
backend/app/: __init__.py
backend/app/auth/: __init__.py  decorators.py  routes.py  services.py
backend/app/classrooms/: __init__.py  routes.py  services.py
backend/app/config/: __init__.py
backend/app/database/: __init__.py  models.py
backend/app/main/: __init__.py  routes.py  services.py
backend/app/reports/: __init__.py  routes.py  services.py
backend/static/: style.css
backend/templates/: index.html
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(admin)/admins/: page.tsx
frontend/app/[database]/: page.tsx
frontend/app/[slug]/: page.tsx
frontend/app/login/: page.tsx
frontend/assets/: icons.ts
frontend/components/CodeArea/: index.tsx
frontend/components/DatabaseCard/: index.tsx
frontend/components/Footer/: index.tsx
frontend/components/Header/: index.tsx
frontend/components/LoadingSpinner/: index.tsx
frontend/components/MessageStatus/: index.tsx
frontend/components/ProtectedRoute/: index.tsx
frontend/components/ResultCard/: index.tsx
frontend/components/Table/: index.tsx
frontend/components/Toast/: index.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts
frontend/lib/services/: admin.ts  student.ts  teacher.ts
frontend/types/: Response.ts  Table.ts  databases.ts  metrics.ts  models.ts  ui.ts  validate.ts
(+17 files in other folders)
